completed Authontication